# ansel-denoise

./: .gitignore  CONTRIBUTING.md  LICENSE-DATA.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: shard-contribution.yml
contrib/: README.md  registry.jsonl
contrib/pending/: your-github-name-20260719-1624.json
data/: noiseprofiles.upstream  rawspeed_levels.json
docs/: architecture.md  cloud.md
fixtures/: fixture-expected.f32  fixture-input.f32  fixture-meta.json
models/: manifest.json
notebooks/: colab_train.ipynb  kaggle_train.ipynb  train.ipynb
scripts/: collect_contribution.sh  compact_shards.sh  fetch_shards.sh  harvest_rpu.sh  make_fixture.py  pack_contribution.py  prune_shards.sh  publish_model.py  publish_shards.sh  setup_contributor.ps1  setup_contributor.sh  smoke_test.sh  submit_contribution.ps1  submit_contribution.sh  update_noiseprofiles.sh  update_rawspeed_levels.py
src/ansel_denoise/: __init__.py  cfa.py  crawl_playraw.py  dataset.py  export.py  harvest.py  harvest_library.py  levels.py  model.py  noise.py  profiles.py  train.py  validate_shards.py
tests/: test_cfa.py  test_crawl.py  test_dataset.py  test_harvest.py  test_levels.py  test_library.py  test_noise.py  test_pack_handle.py  test_profiles.py  test_train.py  test_validate_shards.py
